svc-thanos-query.yaml
apiVersion: v1
kind: Service
metadata:
  name: thanos-query
  namespace: monitoring
spec:
  ports:
  - name: http
    port: 10902
    protocol: TCP
    targetPort: http
  selector:
    app: thanos-query
  sessionAffinity: None
  type: ClusterIP
