svc-thanos-store-zwindlerk8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: thanos-store-zwindlerk8s
  namespace: monitoring
spec:
  ports:
  - name: grpc
    port: 10901
    protocol: TCP
    targetPort: grpc
  selector:
    app: thanos-store
    cluster: zwindlerk8s
  sessionAffinity: None
  type: ClusterIP
