ingress-traefik-prometheus.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: prometheus-aks.zwindler.fr
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus-server
          servicePort: 80
